--- a/_posts/2020-03-30-000-45-day-follow-up.md
+++ b/_posts/2020-03-30-000-45-day-follow-up.md
@@ -1,3 +1,11 @@
+---
+title: "45 Day Follow Up"
+author: Austin
+date: 2020-03-15-0000
+tags: [day 45, carnivore, carnivore diet, caffeine, electrolytes, cardiovascular load, omega 3, omega 6, fatty acid]
+toc: false
+---
+
 **Caffeine:**
 
 In this sub-test of 15 samples, I looked at how caffeine dosage (total mg / day) and last time of ingestion effected sleep quality (simple 1-5 scale).  One note on the raw data (link below) is that the caffeine / sleep samples were taken on consecutive days.  They do not correspond to the dates and other values on the spreadsheet.  I.E.  the caffeine / sleep samples were taken on 15 consecutive days, but the other values were only being monitored and documented three times per week.
