--- a/_posts/2020-03-15-0000-30-day-review.md
+++ b/_posts/2020-03-15-0000-30-day-review.md
@@ -1,7 +1,7 @@
 ---
 title: "Carnivore Diet:  30 Day Review"
 author: Austin
-date: 2020-03-15-0000
+date: 2020-03-15
 tags: [30 day review, carnivore, carnivore diet, day 30, heart rate, blood pressure, nutrient density, electrolytes]
 toc: false
 ---
